changed social media profiles

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ footer-links:
   email: srajkarne11@gmail.com
   facebook:
   flickr:
-  github: https://github.com/Legion-God
-  instagram: https://www.instagram.com/daemons_inside/
-  linkedin: https://www.linkedin.com/in/shubhendra-rajkarne/
+  github: Legion-God
+  instagram: daemons_inside
+  linkedin: shubhendra-rajkarne
   pinterest:
   rss: rss
   twitter: 
