moved some navbar links to home page

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: daemonsInside
 author: Shubhendra Rajkarne
 
 # Short bio or description (displayed in the header)
-description: A Computer Science blog about anything computation.
+description: A Programming blog about umm... you know, programming stuff.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/whiteLogo.png
