--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: daemonsInside
+name: Daemon'sDisciple
 
 # Name of the author
 author: Shubhendra Rajkarne
@@ -25,7 +25,7 @@ footer-links:
   facebook:
   flickr:
   github: Legion-God
-  instagram: daemons_inside
+  instagram: daemons_disciple
   linkedin: shubhendra-rajkarne
   pinterest:
   rss: rss
@@ -35,16 +35,6 @@ footer-links:
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus: 
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: 
-
-# For newer "GA4" analytics, use the following instead of the "UA" entry above
-#google_analytics_ga4: G-GABC1DEFG
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
